2005-10-06  Ralf Corsepius <ralf.corsepius@rtems.org>

	* libc/include/stdint.h: Add [u]int_fast<N>_t types.

2005-10-04  Ralf Corsepius <ralf.corsepius@rtems.org>

	* libc/include/stdint.h: Move magic to set __have_long* to the
	beginning.  Use #if __have* instead of #if defined(__have*).
	Minor typo fixes.

2005-10-04  James E Wilson  <wilson@specifix.com>

	* libc/include/sys/dirent.h (_DIRENT_H_): Delete #include_next.  Add
	#error.

2005-10-03  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/sys/linux/include/stdint.h: Include <sys/types.h> and
	incorporate Ralf's change below.

2005-10-03  Ralf Corsepius <ralf.corsepius@rtems.org>

	* libc/include/stdint.h: 
	Use __INTMAX_TYPE__ to derive intmax_t.
	Use __UINTMAX_TYPE__ to derive uintmax_t.
	Fix minor typo.

2005-09-27  Ralf Corsepius <ralf.corsepius@rtems.org>

	* libc/include/stdint.h: Correct __STDINT_EXP macro incorrectly 
	handling GCC >= 4.

2005-09-20  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/sys/linux/include/stdint.h: Update to match functionality
	of generic newlib stdint.h.

2005-09-20  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/stdint.h (__EXP): Rename to __STDINT_EXP
	and do not #undef the macro after it is used.  Fix typos.
	Also change 64-bit constants to use the __have_long64 and
	__have_longlong64 flags to determine if long or long long
	constants should be used.
	* libc/include/inttypes.h: Include stddef.h to get wchar_t
	type defined.

2005-09-20  Shaun Jackman  <sjackman@gmail.com>

	* libc/include/stdint.h: Fix typo in names of
	LEAST macros.

2005-09-20  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/sys/rtems/include/inttypes.h: Moved to...
	* libc/include/inttypes.h: ...here.

2005-09-19  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/sys/rtems/include/stdint.h: Moved to...
	* libc/include/stdint.h: ...here.

2005-09-08  Jeff Johnston  <jjohnstn@redhat.com>

	* Makefile.am: Add include files under bits sub-directory.
	* Makefile.in: Regenerated.